--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ a.anchor{display: block; position: relative; top: -50px; visibility: hidden;}
   min-width: 100%;
   overflow: hidden;
   height: 440px;
-  background: url(/img/slide.jpg) no-repeat center center;
+  background: url(../img/slide.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
