--- a/index.mustache
+++ b/index.mustache
@@ -112,5 +112,18 @@
         <p class="muted credit pull-right">&copy; {{ copyright }}</p>
     </div>
 </footer>
+
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28875904-1']);
+  _gaq.push(['_setDomainName', 'kievfprog.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </body>
 </html>
