--- a/index.mustache
+++ b/index.mustache
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="wrapper" id="registration">
             <h1>{{ event }}</h1>
-            <h3>{{ subtitle }} </h3>
+            <h3>{{ date }} </h3>
             <br/>
             <p><a href="{{ rsvp }}" class="btn btn-primary btn-large">Регистрация</a>
                 <a href="{{ twitter }}" class="btn btn-primary btn-large">#kievfprog</a>
