--- a/index.mustache
+++ b/index.mustache
@@ -98,14 +98,32 @@
                 </address>
             </div>
 
-            <!--
             <div class="span8">
                 <h4>Карта</h4>
                 <div>
-                    <script type="text/javascript" charset="utf-8" src="{{ venue-map }}"></script>
+                    <div id="ymap" style="width: 450px; height: 350px;"></div>
+                    <script type="text/javascript">
+                    function domap(ymaps) {
+                        var map = new ymaps.Map("ymap", {
+                            center: {{ venue-center }},
+                            zoom: 16,
+                            type: "yandex#map"
+                        });
+                        map.controls
+                            .add("zoomControl")
+                            .add("mapTools");
+                        map.geoObjects
+                            .add(new ymaps.Placemark({{ venue-center }}, {
+                                balloonContent: "{{ venue }}"
+                            }, {
+                                preset: "twirl#greenDotIcon"
+                            }));
+                    };
+                    </script>
+                    <script type="text/javascript" src="http://api-maps.yandex.ru/2.0-stable/?lang=en-US&coordorder=longlat&load=package.full&wizard=constructor&onload=domap"></script>
                 </div>
             </div>
-            -->
+
         </div>
     </section>
 
