--- a/index.mustache
+++ b/index.mustache
@@ -65,7 +65,7 @@
         </div>
 
         {{#talks}}
-        <div class="media" style="float: left; padding-right: 100px;">
+        <div class="media" style="float: left; width: 270px; padding-right: 10px;">
             <h5>
                 <span class="badge badge-info">{{ timing }}</span>
                 {{ talk }}
