--- a/index.mustache
+++ b/index.mustache
@@ -45,8 +45,12 @@
             <h1>{{ event }}</h1>
             <h3>{{ date }} </h3>
             <br/>
-            <p><a href="{{ rsvp }}" class="btn btn-primary btn-large">Регистрация</a>
+            <p>
+                <a href="{{ rsvp }}" class="btn btn-primary btn-large">Регистрация</a>
                 <a href="{{ twitter }}" class="btn btn-primary btn-large">#kievfprog</a>
+            </p>
+            <p>
+            <a href="{{ rsvp1 }}" class="btn btn-warning">Дополнительная регистрация</a>
             </p>
             <!-- <iframe width="100%" height="400" src="{{ streamurl }}" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
         </div>
@@ -165,5 +169,6 @@
 </footer>
 
   <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-42239133-1', 'kievfprog.net');  ga('send', 'pageview');</script>
+
 </body>
 </html>
