--- a/index.mustache
+++ b/index.mustache
@@ -65,7 +65,7 @@
     <section>
         <a class="anchor" id="agenda"></a>
         <div>
-            <h2>Доклады</h2>
+            <h2>Доклады {{#non-finalized-timing}}<small>(расписание будет меняться)</small>{{/non-finalized-timing}}</h2>
         </div>
 
         {{#talks}}
