Ukraine Erlang User Group

--- a/index.mustache
+++ b/index.mustache
@@ -151,6 +151,7 @@
                 <h2>Еще функциональщики</h2>
                 <div>
                     <ul>
+                        <li><a href="https://groups.google.com/d/forum/erlang-in-ukraine">Ukraine Erlang User Group</a></li>
                         <li><a href="http://odhug.github.io/site/">Odessa Haskell User Group</a></li>
                         <li><a href="http://lambda.dn.ua">Донецкий Лямбда-клуб</a></li>
                         <li><a href="https://groups.google.com/forum/?fromgroups#!forum/lispk">Kiev Lisp User Group</a></li>
