erlang-in-ukraine: use the name from the google group page

--- a/index.mustache
+++ b/index.mustache
@@ -151,10 +151,10 @@
                 <h2>Еще функциональщики</h2>
                 <div>
                     <ul>
-                        <li><a href="https://groups.google.com/d/forum/erlang-in-ukraine">Ukraine Erlang User Group</a></li>
                         <li><a href="http://odhug.github.io/site/">Odessa Haskell User Group</a></li>
                         <li><a href="http://lambda.dn.ua">Донецкий Лямбда-клуб</a></li>
                         <li><a href="https://groups.google.com/forum/?fromgroups#!forum/lispk">Kiev Lisp User Group</a></li>
+                        <li><a href="https://groups.google.com/d/forum/erlang-in-ukraine">Erlang в Україні</a></li>
                         <li>если есть еще, отправьте <a href="https://github.com/proger/kievfprog/blob/master/index.mustache#L147">пулл реквест</a>!</li>
                     </ul>
                 </div>
