kievfprog #5 is on!

--- a/index.mustache
+++ b/index.mustache
@@ -193,6 +193,7 @@
                         <li><a href="http://dou.ua/calendar/2513/">Erlang от @darkproger 14 ноября 2012</a></li>
                         <li><a href="http://dou.ua/calendar/2265/">kiev::fprog 27 сентября 2012</a></li>
                         <li><a href="http://dou.ua/calendar/2040/">kiev::fprog 21 июля 2012</a></li>
+                        <li><a href="https://github.com/proger/kievfprog/blob/KIEVFPROG_4/event.yaml">kiev::fprog 3 августа 2013</a></li>
                     </ul>
                 </div>
 
