--- a/index.mustache
+++ b/index.mustache
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<a href="https://raw.github.com/proger/kievfprog/master/event.yaml"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="для гиков"></a>
+<a href="https://raw.github.com/kievfprog/kievfprog.github.io/master/event.yaml"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="для гиков"></a>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
@@ -150,6 +150,7 @@
                 </address>
             </div>
 
+            {{#venue-center}}
             <div class="span8">
                 <h4>Карта</h4>
                 <div>
@@ -175,6 +176,7 @@
                     <script type="text/javascript" src="http://api-maps.yandex.ru/2.0-stable/?lang=en-US&coordorder=longlat&load=package.full&wizard=constructor&onload=domap"></script>
                 </div>
             </div>
+            {{/venue-center}}
 
         </div>
     </section>
@@ -194,6 +196,7 @@
                         <li><a href="http://dou.ua/calendar/2265/">kiev::fprog 27 сентября 2012</a></li>
                         <li><a href="http://dou.ua/calendar/2040/">kiev::fprog 21 июля 2012</a></li>
                         <li><a href="https://github.com/proger/kievfprog/blob/KIEVFPROG_4/event.yaml">kiev::fprog 3 августа 2013</a></li>
+                        <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_5/event.yaml">kiev::fprog 15 ноября 2013</a></li>
                     </ul>
                 </div>
 
