we have a venue now (and a donate button this time)
this venue costs us only UAH 1000 thanks to Igor Palamarchuk.

however it'd be quite stupid to make everyone pay on entry,
i'm opening voluntary donations and am encouraging every participant
to engage in this.

https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GZSFFVKBWPWEC

--- a/index.mustache
+++ b/index.mustache
@@ -63,6 +63,14 @@
             <a href="{{ rsvp1 }}" class="btn btn-warning">Дополнительная регистрация</a>
             </p>
             {{/rsvp1}}
+            <p>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="GZSFFVKBWPWEC">
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+            </p>
             <!-- <iframe width="100%" height="400" src="{{ streamurl }}" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
         </div>
     </div>
@@ -144,7 +152,7 @@
         </div>
         <div class="row">
             <div class="span4">
-                <h4>{{ venue }}</h4>
+                <h4>{{#venue-url}}<a href="{{ venue-url }}">{{/venue-url}}{{ venue }}{{#venue-url}}</a>{{/venue-url}}</h4>
                 <address>
                     {{ venue-address }}
                 </address>
