--- a/index.mustache
+++ b/index.mustache
@@ -24,7 +24,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="brand" href="#registration"><strong>{{ event }}</strong></a>
+            <a class="brand" href="#registration"></a>
             <div class="pull-right">
                 {{#ical}}
                 <a href="{{ ical }}" class="btn btn-info">ical</a>
