"Send pull request" points directly to index.mustache

--- a/index.mustache
+++ b/index.mustache
@@ -220,7 +220,7 @@
                         <li><a href="http://lambda.dn.ua">Донецкий Лямбда-клуб</a></li>
                         <li><a href="https://groups.google.com/forum/?fromgroups#!forum/lispk">Kiev Lisp User Group</a></li>
                         <li><a href="https://groups.google.com/d/forum/erlang-in-ukraine">Erlang в Україні</a></li>
-                        <li>если есть еще, отправьте <a href="https://github.com/kievfprog/kievfprog.github.io/">пулл реквест</a>!</li>
+                        <li>если есть еще, отправьте <a href="https://github.com/kievfprog/kievfprog.github.io/blob/master/index.mustache">пулл реквест</a>!</li>
                     </ul>
                 </div>
             </div>
