--- a/index.mustache
+++ b/index.mustache
@@ -31,13 +31,7 @@
                 {{/ical}}
                 <a href="{{ facebook }}" class="btn btn-info">facebook</a>
             </div>
-            <!--
-            <ul class="nav" id="main-menu-left">
-                <li><a href="#agenda">Доклады</a></li>
-                <li><a href="#info">Место проведения</a></li>
-            </ul>
-            -->
-        </div>
+]        </div>
     </div>
 </div>
 
@@ -50,18 +44,18 @@
             <p>
             {{^past}}
             {{#rsvp}}
-                <a href="{{ rsvp }}" class="btn btn-primary btn-large">Регистрация</a>
+                <a href="{{ rsvp }}" class="btn btn-primary btn-large">👉 Event Website 👈</a>
             {{/rsvp}}
             {{^rsvp}}
-                <a href="#" class="btn btn-primary btn-large disabled">Регистрация уже закрыта</a>
+                <a href="#" class="btn btn-primary btn-large disabled">Registration is closed</a>
             {{/rsvp}}
             {{/past}}
-                <a href="{{ twitter }}" class="btn btn-primary btn-large">#kievfprog</a>
+                <a href="{{ twitter }}" class="btn btn-success btn-large">@kievfprog</a>
             </p>
             {{^past}}
             {{#rsvp1}}
             <p>
-            <a href="{{ rsvp1 }}" class="btn btn-warning">Дополнительная регистрация</a>
+            <a href="{{ rsvp1 }}" class="btn btn-warning">Additional Registration</a>
             </p>
             {{/rsvp1}}
             {{/past}}
@@ -85,13 +79,13 @@
         <iframe width="100%" height="437" src="{{ streamurl }}" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
       </section> -->
 
+    {{#talks}}
     <section>
         <a class="anchor" id="agenda"></a>
         <div>
             <h2>Доклады {{#non-finalized-timing}}<small>(расписание будет меняться)</small>{{/non-finalized-timing}}</h2>
         </div>
 
-        {{#talks}}
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5 class="pull-left" style="min-height: 40px;">
                 <span class="badge badge-info">{{ timing }}</span>
@@ -111,9 +105,8 @@
                 {{/slides}}
             </div>
         </div>
-        {{/talks}}
-
     </section>
+    {{/talks}}
 
     <div style="clear: both; padding: 10px;"></div>
 
@@ -149,10 +142,11 @@
     <div style="clear: both; padding: 10px;"></div>
     {{/display-materials}}
 
+    {{#venue}}
     <section>
         <a class="anchor" id="info"></a>
         <div>
-            <h2>Где</h2>
+            <h2>Venue</h2>
         </div>
         <div class="row">
             <div class="span4">
@@ -164,7 +158,7 @@
 
             {{#venue-center}}
             <div class="span8">
-                <h4>Карта</h4>
+                <h4>Map</h4>
                 <div>
                     <div id="ymap" style="width: 450px; height: 350px;"></div>
                     <script type="text/javascript">
@@ -192,15 +186,18 @@
 
         </div>
     </section>
+    {{/venue}}
 
     <section>
         <a class="anchor" id="archive"></a>
 
         <div class="row">
             <div class="span12">
-                <h2>Прошедшие встречи</h2>
+                <h2>Past meetups</h2>
                 <div>
-                    <ul>
+                  <ul>
+                        <li><a href="https://www.facebook.com/events/108261176248196/">Extraordinary #kievfprog (April 28, 2016)</a></li>
+                        <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/d673a0101da2c00458d505f4414eab93559fc8ba/event.yaml">#kievfprog 2015</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_6/event.yaml">#kievfprog 14 июня 2014</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_5/event.yaml">#kievfprog 15 ноября 2013</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog/blob/KIEVFPROG_4/event.yaml">#kievfprog 3 августа 2013</a></li>
@@ -213,9 +210,10 @@
                     </ul>
                 </div>
 
-                <h2>Еще функциональщики</h2>
+                <h2>Other local communities</h2>
                 <div>
                     <ul>
+                        <li><a href="http://fby.by/">f(by)</a></li>
                         <li><a href="http://odhug.github.io/site/">Odessa Haskell User Group</a></li>
                         <li><a href="http://lambda.dn.ua">Донецкий Лямбда-клуб</a></li>
                         <li><a href="https://groups.google.com/forum/?fromgroups#!forum/lispk">Kiev Lisp User Group</a></li>
