--- a/index.mustache
+++ b/index.mustache
@@ -200,7 +200,7 @@
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/d673a0101da2c00458d505f4414eab93559fc8ba/event.yaml">#kievfprog 2015</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_6/event.yaml">#kievfprog 14 июня 2014</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_5/event.yaml">#kievfprog 15 ноября 2013</a></li>
-                        <li><a href="https://github.com/kievfprog/kievfprog/blob/KIEVFPROG_4/event.yaml">#kievfprog 3 августа 2013</a></li>
+                        <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_4/event.yaml">#kievfprog 3 августа 2013</a></li>
                         <li><a href="http://hotcode.org/program-ru/stages-ru/functional/">FP stage на Hotcode 31 мая - 1 июня 2013</a></li>
                         <li><a href="http://dou.ua/calendar/3151/">Курсы Erlang от @5HT 13-14 апреля 2013</a></li>
                         <li><a href="http://dou.ua/calendar/3068/">#kievfprog 27 марта 2013</a></li>
