--- a/index.mustache
+++ b/index.mustache
@@ -196,6 +196,7 @@
                 <h2>Past meetups</h2>
                 <div>
                   <ul>
+                        <li><a href="http://2016.kievfprog.net">#kievfprog 2016 (November 26)</a></li>
                         <li><a href="https://www.facebook.com/events/108261176248196/">Extraordinary #kievfprog (April 28, 2016)</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/d673a0101da2c00458d505f4414eab93559fc8ba/event.yaml">#kievfprog 2015</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_6/event.yaml">#kievfprog 14 июня 2014</a></li>
